--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "cpf-cnpj-validator": "^1.0.3",
+    "dotenv": "^16.4.4",
     "email-validator": "^2.0.4",
+    "mongoose": "^8.1.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
