--- a/package.json
+++ b/package.json
@@ -20,16 +20,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@fnando/cnpj": "^1.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "bcrypt": "^5.1.1",
     "cpf-cnpj-validator": "^1.0.3",
     "dotenv": "^16.4.4",
     "email-validator": "^2.0.4",
-    "mongoose": "^8.1.3",
-    "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
