--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "dotenv": "^16.4.4",
     "email-validator": "^2.0.4",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.3"
+    "mongoose": "^8.1.3",
+    "nodemailer": "^6.9.10"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
