--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.0.2",
     "cpf-cnpj-validator": "^1.0.3",
+    "datauri": "^4.1.0",
     "dotenv": "^16.4.4",
     "email-validator": "^2.0.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
-    "nodemailer": "^6.9.10"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.10",
+    "parser": "^0.1.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
